src/test/deca/context/invalid/created/return/return_void_boolean.deca
// Description :
//    return mauvais type : boolean, demandé void
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
void met(){
return true;
}
}